Add existing file

--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
           
 
           <div class="jumbotron">
+  <img src="/img/logo.png">
   <p>
     This website, <em>Biomed.id</em>, is intended for fast publication of our newest research in the field of biomedical instrumentation. Our ongoing research projects includes fast,accurate and reliable acquisition of biomedical informations from the human body, its analysis and application in medical diagnostics and life support. Research results will be published soon.
   </p>
