--- a/index.html
+++ b/index.html
@@ -25,8 +25,11 @@
           <div class="jumbotron">
   <img src="/img/logo.png">
   <p>
-    This website, <em>Biomed.id</em>, is intended for fast publication of our newest research in the field of biomedical instrumentation. Our ongoing research projects includes fast,accurate and reliable acquisition of biomedical informations from the human body, its analysis and application in medical diagnostics and life support. <br>Research results will be published soon.<br>
-    For more information, email: <img src="/img/emailinfo.png">
+    This website, <em>Biomed.id</em>, is intended for fast publication of our newest research in the field of biomedical instrumentation. 
+ </p>
+  <p>On going research projects includes: fast,accurate and reliable acquisition of biomedical informations from the human body, its analysis and application in medical diagnostics and life support. <br>Research results will be published soon.</p>
+  <p>
+    For information, send email to: <img src="/img/emailinfo.png">
   </p>
 </div>
 <!--
