Add existing file

--- a/index.html
+++ b/index.html
@@ -22,8 +22,12 @@
           
           
 
-          <div class="jumbotron">
+          <div>
+<center>
   <img src="/img/logo.png">
+</center>
+</div>
+<div class="jumbotron">
   <p>
     This website, <em>Biomed.id</em>, is intended for fast publication of our newest research in the field of biomedical instrumentation. 
  </p>
