--- a/index.html
+++ b/index.html
@@ -29,12 +29,8 @@
 </div>
 <div class="jumbotron">
   <p>
-    This website, <em>Biomed.id</em>, is intended for fast publication of our newest research in the field of biomedical instrumentation. 
- </p>
-  <p>On going research projects includes: fast,accurate and reliable acquisition of biomedical informations from the human body, its analysis and application in medical diagnostics and life support. <br>Research results will be published soon.</p>
-  <p>
-    For information, send email to: <img src="/img/emailinfo.png">
-  </p>
+    This website, <em>Biomed.id</em>, is intended for fast publication of our newest research in the field of biomedical instrumentation. Our on going research projects includes: fast,accurate and reliable acquisition of biomedical informations from the human body, its analysis and application in medical diagnostics and life support. <br>Research results will be published soon.</p>
+    For any inquiries, send email to: <img src="/img/emailinfo.png">
 </div>
 <!--
 <h2>News</h2>
