Add existing file

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 <div class="jumbotron">
   <p>
     This website, <em>Biomed.id</em>, is intended for fast publication of our newest research in the field of biomedical instrumentation. Our on going research projects includes: fast,accurate and reliable acquisition of biomedical informations from the human body, its analysis and application in medical diagnostics and life support. <br>Research results will be published soon.</p>
-    <p>For any inquiries, send email to: <img src="/img/emailinfo.png"></p>
+    <p>For any inquiries, please send email to: <img src="/img/emailinfo.png"></p>
 </div>
 <!--
 <h2>News</h2>
