--- a/index.html
+++ b/index.html
@@ -29,8 +29,8 @@
 </div>
 <div class="jumbotron">
   <p>
-    This website, <em>Biomed.id</em>, is intended for fast publication of our newest research in the field of biomedical instrumentation. Our ongoing research projects includes: fast,accurate and reliable acquisition of biomedical informations from the human body, its analysis and application in medical diagnostics and life support. <br>Research results will be published soon.</p>
-    <p>For any inquiries, please send email to: <img src="/img/emailinfo.png"></p>
+    This website, <em>Biomed.id</em>, is intended for fast publication of our newest research in the field of biomedical instrumentation. Our ongoing research projects includes: fast, accurate and reliable acquisition of biomedical informations from the human body, its analysis and application in medical diagnostics and life support. <br>Research results will be published soon.</p>
+    <p>For any inquiries, please send an email to: <img src="/img/emailinfo.png"></p>
 </div>
 <!--
 <h2>News</h2>
@@ -40,6 +40,7 @@
 
 
 -->
+
 
           <div class="footer">
             <p>
