--- a/index.html
+++ b/index.html
@@ -29,7 +29,9 @@
 </div>
 <div class="jumbotron">
   <p>
-    This website, <em>Biomed.id</em>, is intended for fast publication of our newest research in the field of biomedical instrumentation. Our ongoing research projects includes: fast, accurate and reliable acquisition of biomedical informations from the human body, its analysis and application in medical diagnostics and life support. <br>Research results will be published soon.</p>
+    Biomed.id, by Biomed Indonesia<p>
+    We do Research and Development in the field of Biomedical Engineering and application of Internet of Things<br>Current Projects includes: Research on Automatic Detection of Heart Disease, Biomedical Instrumentation for Human Body Sensors, Development of practical Medical Devices and Softwares to help doctors in hospitals, and IoT Based Remote Environmental Measurement.</p>
+    Research collaboration proposals are always welcome.
     <p>For any inquiries, please send an email to: <img src="/img/emailinfo.png"></p>
 </div>
 <!--
@@ -44,8 +46,9 @@
 
           <div class="footer">
             <p>
-              <a href="http://biomed.id/">Biomedical Research</a>
+            <a href="http://biomed.id/">Biomed Indonesia, a Biomedical Research Laboratory</a>
             </p>
+            <p>We are located in Surabaya City, Indonesia. Contact first by email to <img src="/img/emailinfo.png"></p> 
           </div>
 
         </div> <!-- /container -->
