--- a/index.html
+++ b/index.html
@@ -29,9 +29,9 @@
 </div>
 <div class="jumbotron">
   <p>
-    Biomed.id, by Biomed Indonesia<p>
-    We do Research and Development in the field of Biomedical Engineering and application of Internet of Things<br>Current Projects includes: Research on Automatic Detection of Heart Disease, Biomedical Instrumentation for Human Body Sensors, Development of practical Medical Devices and Softwares to help doctors in hospitals, and IoT Based Remote Environmental Measurement.</p>
-    Research collaboration proposals are always welcome.
+    Biomed.id, by Biomed Indonesia</p>
+    <p>Research and Development in the field of Biomedical Engineering and Application of Internet of Things</p>
+    <p>Research collaboration proposals are always welcome.</p>
     <p>For any inquiries, please send an email to: <img src="/img/emailinfo.png"></p>
 </div>
 <!--
@@ -48,7 +48,7 @@
             <p>
             <a href="http://biomed.id/">Biomed Indonesia, a Biomedical Research Laboratory</a>
             </p>
-            <p>We are located in Surabaya City, Indonesia. Contact first by email to <img src="/img/emailinfo.png"></p> 
+            <p>We are located in Surabaya City, Indonesia. Contact first by the above email</p> 
           </div>
 
         </div> <!-- /container -->
