--- a/index.html
+++ b/index.html
@@ -30,7 +30,8 @@
 <div class="jumbotron">
   <p>
     Biomed.id, by Biomed Indonesia</p>
-    <p>Research and Development in the field of Biomedical Engineering and Application of Internet of Things</p>
+    <p>Research and Development on Biomedical Engineering and 
+       Internet of Things</p>
     <p>Research collaboration proposals are always welcome.</p>
     <p>For any inquiries, please send an email to: <img src="/img/emailinfo.png"></p>
 </div>
