--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
     Biomed.id, by Biomed Indonesia</p>
     <p>Research and Development on Biomedical Engineering and 
        Internet of Things</p>
-    <p>Research collaboration proposals are always welcome.</p>
+    <p>Collaboration proposals are always welcome.</p>
     <p>For any inquiries, please send an email to: <img src="/img/emailinfo.png"></p>
 </div>
 <!--
