--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
     Biomed.id, by Biomed Indonesia</p>
     <p>Research and Development on Biomedical Engineering and 
        Internet of Things</p>
-    <p>Collaboration proposals are always welcome.</p>
+    <p>Research Collaboration proposals are always welcome.</p>
     <p>For any inquiries, please send an email to: <img src="/img/emailinfo.png"></p>
 </div>
 <!--
@@ -49,7 +49,7 @@
             <p>
             <a href="http://biomed.id/">Biomed Indonesia, a Biomedical Research Laboratory</a>
             </p>
-            <p>We are located in Surabaya City, Indonesia. Contact first by the above email</p> 
+            <p>We are located in Surabaya City, Indonesia, with access to the brightest technical and medical minds. Contact first by the above email</p> 
           </div>
 
         </div> <!-- /container -->
