--- a/index.html
+++ b/index.html
@@ -49,7 +49,8 @@
             <p>
             <a href="http://biomed.id/">Biomed Indonesia, a Biomedical Research Laboratory</a>
             </p>
-            <p>We are located in Surabaya City, Indonesia, with access to the brightest technical and medical minds. Contact first by the above email</p> 
+            <p>We are located in Surabaya City, Indonesia, with access to the brightest technical and medical minds of the country.</p>
+              <p>Contact first by the above email</p> 
           </div>
 
         </div> <!-- /container -->
