--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
        Internet of Things</p>
     <p>Research Collaborations are always welcome.</p>
     <p>For any inquiries, please send an email to: <img src="/img/emailinfo.png"></p>
-
+            </div>
 <!--
 <h2>News</h2>
 <ul class="news list-unstyled">
