--- a/index.html
+++ b/index.html
@@ -51,7 +51,8 @@
             <a href="http://biomed.id/">Biomed Indonesia, a Biomedical Research Laboratory</a>
             </p>
             <p>We are located in Surabaya City, Indonesia, with access to the brightest technical and medical minds of the country.</p>
-              <p>Contact first by the above email.</p> 
+            <p>Postal Address:<br><img src="/address.png"></p
+            <p>Please contact first by the above email.</p> 
           </div> 
 
         </div> <!-- /container -->
